# FanniTakax

./: README.md
week-01/day-02/01/: main.cpp
week-01/day-02/02/: main.cpp
week-01/day-02/03/: main.cpp
week-01/day-02/04/: main.cpp
week-01/day-02/05/: main.cpp
week-01/day-02/06/: CMakeLists.txt  main.cpp
week-01/day-02/07/: CMakeLists.txt  main.cpp
week-01/day-02/08/: CMakeLists.txt  main.cpp
week-01/day-02/09/: CMakeLists.txt  main.cpp
week-01/day-02/10/: main.cpp
week-01/day-02/11/: CMakeLists.txt  main.cpp
week-01/day-02/12/: CMakeLists.txt  main.cpp
week-01/day-02/13/: CMakeLists.txt  main.cpp
week-01/day-02/14/: CMakeLists.txt  main.cpp
week-01/day-02/15/: CMakeLists.txt  main.cpp
week-01/day-02/16/: CMakeLists.txt  main.cpp
week-01/day-02/17/: CMakeLists.txt  main.cpp
week-01/day-02/18/: CMakeLists.txt  main.cpp
week-01/day-02/19/: CMakeLists.txt  main.cpp
week-01/day-02/20/: CMakeLists.txt  main.cpp
week-01/day-02/21/: CMakeLists.txt  main.cpp
week-01/day-02/22/: CMakeLists.txt  main.cpp
week-01/day-02/23/: CMakeLists.txt  main.cpp
week-01/day-02/24/: CMakeLists.txt  main.cpp
week-01/day-02/25/: CMakeLists.txt  main.cpp
week-01/day-02/26/: CMakeLists.txt  main.cpp
week-05/day-03/01-InstrumensToStringedInstruments/: CMakeLists.txt  bassguitar.cpp  bassguitar.h  electricguitar.cpp  electricguitar.h  instrument.cpp  instrument.h  main.cpp  stringedinstruments.cpp  stringedinstruments.h  violin.cpp  violin.h
week-05/day-04/09-CowsAndBulls/cab_tests/: CMakeLists.txt  cabtest.cpp
week-07/day-01/DOJO/tdd/tdd_tests/: CMakeLists.txt  tdd_tests.cpp
week-08/day-01/: .cproject  main.c
week-08/day-02/: .cproject  main.c
week-08/day-03/: .cproject  main.c
week-08/day-04/: .cproject  main.c
zProjekt_week-00/00_ImageRead_LoadToScreen_ChangeToGray_Save/: main.cpp
zProjekt_week-00/01_CircleCenter_ClickCircle_ConnectLine/: main.cpp
zProjekt_week-00/02_GetAngle/: CMakeLists.txt  main.cpp
zProjekt_week-01/01_click_angles_sql/: CMakeLists.txt  main.cpp  test.db
(+426 files in other folders)
